objects/ServiceAp__c.object
<CustomObject>
    <fields>
        <fullName>R1_ID__c</fullName>
        <description>rid desc</description>
        <inlineHelpText>rid</inlineHelpText>
        <label>R1 ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R2_ID__c</fullName>
        <description>rid desc</description>
        <inlineHelpText>rid</inlineHelpText>
        <label>R2 ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R3_ID__c</fullName>
        <description>rid desc</description>
        <inlineHelpText>rid</inlineHelpText>
        <label>R3 ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>ServiceAp</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ServiceO Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ServiceAps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>